I'm a fucking idiot. Changed URLs.

--- a/index.html
+++ b/index.html
@@ -3720,7 +3720,7 @@ Error message and password prompt
 <div created="20140622154411062" creator="Sixy" modified="20140622154413944" modifier="Sixy" title="$:/DefaultTiddlers">
 <pre>[[Home]]</pre>
 </div>
-<div current-tiddler="$:/ControlPanel" modified="20140622154403622" modifier="Sixy" title="$:/HistoryList" type="application/json">
+<div current-tiddler="Home" modified="20140622160858660" modifier="Sixy" title="$:/HistoryList" type="application/json">
 <pre>[
     {
         &quot;title&quot;: &quot;$:/ControlPanel&quot;,
@@ -3960,6 +3960,187 @@ Error message and password prompt
             &quot;bottom&quot;: 172.38333129882812,
             &quot;height&quot;: 27.899993896484375
         }
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesWAAPT&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 288.48333740234375,
+            &quot;left&quot;: 125,
+            &quot;width&quot;: 166,
+            &quot;right&quot;: 291,
+            &quot;bottom&quot;: 304.48333740234375,
+            &quot;height&quot;: 16
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'DownloadedPagesWAAPT'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesWAAPT&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesDiscussion&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 308.48333740234375,
+            &quot;left&quot;: 125,
+            &quot;width&quot;: 186,
+            &quot;right&quot;: 311,
+            &quot;bottom&quot;: 324.48333740234375,
+            &quot;height&quot;: 16
+        }
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesSignups&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 233.48333740234375,
+            &quot;left&quot;: 125,
+            &quot;width&quot;: 169,
+            &quot;right&quot;: 294,
+            &quot;bottom&quot;: 249.48333740234375,
+            &quot;height&quot;: 16
+        }
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesPEFE&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 301.48333740234375,
+            &quot;left&quot;: 125,
+            &quot;width&quot;: 154,
+            &quot;right&quot;: 279,
+            &quot;bottom&quot;: 317.48333740234375,
+            &quot;height&quot;: 16
+        }
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesBigCity&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 369.48333740234375,
+            &quot;left&quot;: 125,
+            &quot;width&quot;: 162,
+            &quot;right&quot;: 287,
+            &quot;bottom&quot;: 385.48333740234375,
+            &quot;height&quot;: 16
+        }
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesBCDiscussion&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 389.48333740234375,
+            &quot;left&quot;: 125,
+            &quot;width&quot;: 205,
+            &quot;right&quot;: 330,
+            &quot;bottom&quot;: 405.48333740234375,
+            &quot;height&quot;: 16
+        }
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesBCSignups&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 409.48333740234375,
+            &quot;left&quot;: 125,
+            &quot;width&quot;: 188,
+            &quot;right&quot;: 313,
+            &quot;bottom&quot;: 425.48333740234375,
+            &quot;height&quot;: 16
+        }
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesPTRP&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 477.48333740234375,
+            &quot;left&quot;: 125,
+            &quot;width&quot;: 155,
+            &quot;right&quot;: 280,
+            &quot;bottom&quot;: 493.48333740234375,
+            &quot;height&quot;: 16
+        }
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesPTRPDiscussion&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 497.48333740234375,
+            &quot;left&quot;: 125,
+            &quot;width&quot;: 223,
+            &quot;right&quot;: 348,
+            &quot;bottom&quot;: 513.4833374023438,
+            &quot;height&quot;: 16
+        }
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesPTRPSignups&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 477.48333740234375,
+            &quot;left&quot;: 125,
+            &quot;width&quot;: 206,
+            &quot;right&quot;: 331,
+            &quot;bottom&quot;: 493.48333740234375,
+            &quot;height&quot;: 16
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'DownloadedPagesPTRPSignups'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesPTRPSignups&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'DownloadedPagesPTRPDiscussion'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesPTRPDiscussion&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'DownloadedPagesPTRP'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesPTRP&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'DownloadedPagesBCSignups'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesBCSignups&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'DownloadedPagesBCDiscussion'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesBCDiscussion&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'DownloadedPagesBigCity'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesBigCity&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'DownloadedPagesPEFE'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesPEFE&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'DownloadedPagesSignups'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesSignups&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Draft of 'DownloadedPagesDiscussion'&quot;
+    },
+    {
+        &quot;title&quot;: &quot;DownloadedPagesDiscussion&quot;
+    },
+    {
+        &quot;title&quot;: &quot;Home&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 483.16668701171875,
+            &quot;left&quot;: 777,
+            &quot;width&quot;: 36,
+            &quot;right&quot;: 813,
+            &quot;bottom&quot;: 499.16668701171875,
+            &quot;height&quot;: 16
+        }
     }
 ]</pre>
 </div>
@@ -4091,7 +4272,7 @@ Error message and password prompt
 <div created="20140622152224359" creator="Sixy" modified="20140622152232740" modifier="Sixy" title="$:/SiteTitle">
 <pre>The Archives</pre>
 </div>
-<div modified="20140622154357997" modifier="Sixy" title="$:/state/sidebar">
+<div modified="20140622160855285" modifier="Sixy" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
 <div modified="20140622154436256" modifier="Sixy" title="$:/state/tab-{-1361972208}">
@@ -4103,8 +4284,8 @@ Error message and password prompt
 <div modified="20140622154430888" modifier="Sixy" title="$:/state/tab-{-388046578}">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div modified="20140622154400552" modifier="Sixy" title="$:/state/tab/sidebar-{-1982391943}">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div modified="20140622160857133" modifier="Sixy" title="$:/state/tab/sidebar-{-1982391943}">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20140622152220427" creator="S" modified="20140622152221202" modifier="Six" title="$:/status/UserName">
 <pre>Sixy</pre>
@@ -4155,73 +4336,73 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20140622153728223" creator="Sixy" modified="20140622154246761" modifier="Sixy" title="DownloadedPagesBCDiscussion">
+<div created="20140622153728223" creator="Sixy" modified="20140622160818677" modifier="Sixy" title="DownloadedPagesBCDiscussion">
 <pre>Pages: 1 - 42
 
-[[Page 1|http://sixthhokage1.github.io/DownloadedPagesBCDiscussion/1]]
+[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesBCDiscussion/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153724770" creator="Sixy" modified="20140622154310214" modifier="Sixy" title="DownloadedPagesBCSignups">
+<div created="20140622153724770" creator="Sixy" modified="20140622160812261" modifier="Sixy" title="DownloadedPagesBCSignups">
 <pre>Pages: 1 - 5
 
-[[Page 1|http://sixthhokage1.github.io/DownloadedPagesBCSignups/1]]
+[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesBCSignups/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153731348" creator="Sixy" modified="20140622154250953" modifier="Sixy" title="DownloadedPagesBigCity">
+<div created="20140622153731348" creator="Sixy" modified="20140622160824582" modifier="Sixy" title="DownloadedPagesBigCity">
 <pre>Pages: 1 - 99
 
-[[Page 1|http://sixthhokage1.github.io/DownloadedPagesBigCity/1]]
+[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesBigCity/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153704915" creator="Sixy" modified="20140622154126633" modifier="Sixy" title="DownloadedPagesDiscussion">
+<div created="20140622153704915" creator="Sixy" modified="20140622160844824" modifier="Sixy" title="DownloadedPagesDiscussion">
 <pre>Pages: 1 - 850
 
-[[Page 1|http://sixthhokage1.github.io/DownloadedPagesDiscussion/1]]
+[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesDiscussion/1]]
 
 Thread Status: Alive</pre>
 </div>
-<div created="20140622153734925" creator="Sixy" modified="20140622154206801" modifier="Sixy" title="DownloadedPagesPEFE">
+<div created="20140622153734925" creator="Sixy" modified="20140622160830352" modifier="Sixy" title="DownloadedPagesPEFE">
 <pre>Pages: 1 - 313
 
-[[Page 1|http://sixthhokage1.github.io/DownloadedPagesPEFE/1]]
+[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesPEFE/1]]
 
 Thread Status: Alive</pre>
 </div>
-<div created="20140622153721573" creator="Sixy" modified="20140622154327225" modifier="Sixy" title="DownloadedPagesPTRP">
+<div created="20140622153721573" creator="Sixy" modified="20140622160804557" modifier="Sixy" title="DownloadedPagesPTRP">
 <pre>Pages: 1 - 19
 
-[[Page 1|http://sixthhokage1.github.io/DownloadedPagesPTRP/1]]
+[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesPTRP/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153718626" creator="Sixy" modified="20140622154340994" modifier="Sixy" title="DownloadedPagesPTRPDiscussion">
+<div created="20140622153718626" creator="Sixy" modified="20140622160758981" modifier="Sixy" title="DownloadedPagesPTRPDiscussion">
 <pre>Pages: 1 - 5
 
-[[Page 1|http://sixthhokage1.github.io/DownloadedPagesPTRPDiscussion/1]]
+[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesPTRPDiscussion/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153714339" creator="Sixy" modified="20140622154352385" modifier="Sixy" title="DownloadedPagesPTRPSignups">
+<div created="20140622153714339" creator="Sixy" modified="20140622160751416" modifier="Sixy" title="DownloadedPagesPTRPSignups">
 <pre>Pages: 1 - 6
 
-[[Page 1|http://sixthhokage1.github.io/DownloadedPagesPTRPSignups/1]]
+[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesPTRPSignups/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153708719" creator="Sixy" modified="20140622154140001" modifier="Sixy" title="DownloadedPagesSignups">
+<div created="20140622153708719" creator="Sixy" modified="20140622160837990" modifier="Sixy" title="DownloadedPagesSignups">
 <pre>Pages: 1 - 57
 
-[[Page 1|http://sixthhokage1.github.io/DownloadedPagesSignups/1]]
+[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesSignups/1]]
 
 Thread Status: Alive</pre>
 </div>
-<div created="20140622153522931" creator="Sixy" modified="20140622154108529" modifier="Sixy" title="DownloadedPagesWAAPT">
+<div created="20140622153522931" creator="Sixy" modified="20140622160729870" modifier="Sixy" title="DownloadedPagesWAAPT">
 <pre>Pages: 1 - 15378
 
-[[Page 1|http://sixthhokage1.github.io/DownloadedPagesWAAPT/1]]
+[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesWAAPT/1]]
 
 Thread Status: Alive</pre>
 </div>
