Derp, forgot to save tiddlywiki update

--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab/sidebar-{-1835078512}</li>
+
 <li>$:/status/UserName</li>
 
 <li>$:/StoryList</li>
@@ -4866,10 +4868,13 @@ Error message and password prompt
 <div created="20140622152224359" creator="Sixy" modified="20140622152232740" modifier="Sixy" title="$:/SiteTitle">
 <pre>The Archives</pre>
 </div>
+<div modified="20140825180652461" modifier="Sixy" title="$:/state/tab/sidebar-{-1835078512}">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
 <div created="20140622152220427" creator="S" modified="20140622152221202" modifier="Six" title="$:/status/UserName">
 <pre>Sixy</pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -4976,15 +4981,15 @@ Thread Status: Dead</pre>
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153704915" creator="Sixy" modified="20140622160844824" modifier="Sixy" title="DownloadedPagesDiscussion">
-<pre>Pages: 1 - 850
+<div created="20140622153704915" creator="Sixy" modified="20140825175909775" modifier="Sixy" title="DownloadedPagesDiscussion">
+<pre>Pages: 1 - 896
 
 [[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesDiscussion/1]]
 
 Thread Status: Alive</pre>
 </div>
-<div created="20140622153734925" creator="Sixy" modified="20140622160830352" modifier="Sixy" title="DownloadedPagesPEFE">
-<pre>Pages: 1 - 313
+<div created="20140622153734925" creator="Sixy" modified="20140825180513195" modifier="Sixy" title="DownloadedPagesPEFE">
+<pre>Pages: 1 - 314
 
 [[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesPEFE/1]]
 
@@ -5011,15 +5016,15 @@ Thread Status: Dead</pre>
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153708719" creator="Sixy" modified="20140622160837990" modifier="Sixy" title="DownloadedPagesSignups">
-<pre>Pages: 1 - 57
+<div created="20140622153708719" creator="Sixy" modified="20140825180324632" modifier="Sixy" title="DownloadedPagesSignups">
+<pre>Pages: 1 - 63
 
 [[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesSignups/1]]
 
 Thread Status: Alive</pre>
 </div>
-<div created="20140622153522931" creator="Sixy" modified="20140622160729870" modifier="Sixy" title="DownloadedPagesWAAPT">
-<pre>Pages: 1 - 15378
+<div created="20140622153522931" creator="Sixy" modified="20140825175522988" modifier="Sixy" title="DownloadedPagesWAAPT">
+<pre>Pages: 1 - 16510
 
 [[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesWAAPT/1]]
 
