--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab/sidebar--1835078512</li>
+
 <li>$:/status/UserName</li>
 
 <li>$:/StoryList</li>
@@ -174,8 +176,6 @@ Error message and password prompt
 <li>git</li>
 
 <li>Home</li>
-
-<li>Jeff</li>
 
 </ul>
 </p>
@@ -5570,10 +5570,13 @@ Error message and password prompt
 <div created="20140622152224359" creator="Sixy" modified="20140622152232740" modifier="Sixy" title="$:/SiteTitle">
 <pre>The Archives</pre>
 </div>
+<div modified="20141212064807097" modifier="Sixy" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
 <div created="20140622152220427" creator="S" modified="20140622152221202" modifier="Six" title="$:/status/UserName">
 <pre>Sixy</pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="Home DownloadedPagesWAAPT" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5736,8 +5739,8 @@ Thread Status: Dead</pre>
 
 Thread Status: Alive</pre>
 </div>
-<div created="20140622153522931" creator="Sixy" modified="20141115074413150" modifier="Sixy" title="DownloadedPagesWAAPT">
-<pre>Pages: 1 - 17162
+<div created="20140622153522931" creator="Sixy" modified="20141212064904020" modifier="Sixy" title="DownloadedPagesWAAPT">
+<pre>Pages: 1 - 17307
 
 [[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesWAAPT/1]]
 
@@ -5781,15 +5784,6 @@ PTRP Archives:
 *DownloadedPagesPTRPDiscussion
 
 *DownloadedPagesPTRPSignups</pre>
-</div>
-<div created="20140531062150212" creator="Jeff" modified="20141115072008179" modifier="Jeff" title="Jeff">
-<pre>Here's a little bit about myself. First of all is my gender. I identify as androgyne, in between male and female. I don't care about pronouns, though I still typically refer to myself with masculine pronouns.
-
-I'm 19 years old, and behind my peers on programming skills because of laziness and now just utter lack of time.
-
-I live in Fort Worth, Texas.
-
-I use Windows and Linux. My laptop was on Ubuntu 12.04 before it croaked and my desktop on ~WinVista. My devices are named after Pokémon locations.</pre>
 </div>
 
 </div>
