Started instructions on using the Python script when I should have been in bed an hour and a half ago.

--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/showeditpreview</li>
+
+<li>$:/state/tab/moresidebar-401116514</li>
+
 <li>$:/state/tab/sidebar--1835078512</li>
 
 <li>$:/status/UserName</li>
@@ -176,6 +180,8 @@ Error message and password prompt
 <li>git</li>
 
 <li>Home</li>
+
+<li>Running the Python script</li>
 
 </ul>
 </p>
@@ -5570,13 +5576,19 @@ Error message and password prompt
 <div created="20140622152224359" creator="Sixy" modified="20140622152232740" modifier="Sixy" title="$:/SiteTitle">
 <pre>The Archives</pre>
 </div>
-<div modified="20141212064807097" modifier="Sixy" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div modified="20141212072739920" modifier="Sixy" title="$:/state/showeditpreview">
+<pre>no</pre>
+</div>
+<div modified="20141212071740903" modifier="Sixy" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
+</div>
+<div modified="20141212071739853" modifier="Sixy" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20140622152220427" creator="S" modified="20140622152221202" modifier="Six" title="$:/status/UserName">
 <pre>Sixy</pre>
 </div>
-<div list="Home DownloadedPagesWAAPT" title="$:/StoryList">
+<div list="[[Running the Python script]] git Home DownloadedPagesWAAPT" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5784,6 +5796,11 @@ PTRP Archives:
 *DownloadedPagesPTRPDiscussion
 
 *DownloadedPagesPTRPSignups</pre>
+</div>
+<div created="20141212071752201" creator="Sixy" modified="20141212072758042" modifier="Sixy" tags="" title="Running the Python script">
+<pre>The thread downloader script is available for download at http://www.sixy.name/waapt/threadDownloader.py or by cloning the [[git]] repo. Requires lxml, easiest way to get set up on Windows is to download [[http://portablepython.com/|Portable Python 2.7.x]] and use the copy of IDLE in the portable package. 
+
+Open threadDownloader.py either in an interactive Python session or in IDLE (if the latter, select Run &gt; Run Module from the menu bar). To download a range of pages, use the command `downloadRange(start, stop, info_thread)`.</pre>
 </div>
 
 </div>
