Relative links in index, final commit

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/sidebar</li>
+
+<li>$:/state/tab/sidebar--1835078512</li>
+
 <li>$:/status/UserName</li>
 
 <li>$:/StoryList</li>
@@ -5894,10 +5898,16 @@ Error message and password prompt
 <div created="20140622152224359" creator="Sixy" modified="20140622152232740" modifier="Sixy" title="$:/SiteTitle">
 <pre>The Archives</pre>
 </div>
+<div modified="20160227064655786" modifier="Sixy" title="$:/state/sidebar">
+<pre>yes</pre>
+</div>
+<div modified="20160227064658209" modifier="Sixy" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Tools</pre>
+</div>
 <div created="20140622152220427" creator="S" modified="20140622152221202" modifier="Six" title="$:/status/UserName">
 <pre>Sixy</pre>
 </div>
-<div list="Home DownloadedPagesSignups" title="$:/StoryList">
+<div list="Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6017,73 +6027,73 @@ Error message and password prompt
 <div modified="20140531052722625" modifier="Jeff" title="$:/view">
 <pre>classic</pre>
 </div>
-<div created="20140622153728223" creator="Sixy" modified="20140622160818677" modifier="Sixy" title="DownloadedPagesBCDiscussion">
+<div created="20140622153728223" creator="Sixy" modified="20160227064621037" modifier="Sixy" title="DownloadedPagesBCDiscussion">
 <pre>Pages: 1 - 42
 
-[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesBCDiscussion/1]]
+[ext[Page 1|./DownloadedPagesBCDiscussion/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153724770" creator="Sixy" modified="20140622160812261" modifier="Sixy" title="DownloadedPagesBCSignups">
+<div created="20140622153724770" creator="Sixy" modified="20160227064624893" modifier="Sixy" title="DownloadedPagesBCSignups">
 <pre>Pages: 1 - 5
 
-[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesBCSignups/1]]
+[ext[Page 1|./DownloadedPagesBCSignups/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153731348" creator="Sixy" modified="20140622160824582" modifier="Sixy" title="DownloadedPagesBigCity">
+<div created="20140622153731348" creator="Sixy" modified="20160227064618022" modifier="Sixy" title="DownloadedPagesBigCity">
 <pre>Pages: 1 - 99
 
-[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesBigCity/1]]
+[ext[Page 1|./DownloadedPagesBigCity/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153704915" creator="Sixy" modified="20150610015709798" modifier="Sixy" title="DownloadedPagesDiscussion">
+<div created="20140622153704915" creator="Sixy" modified="20160227064606424" modifier="Sixy" title="DownloadedPagesDiscussion">
 <pre>Pages: 1 - 1025
 
-[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesDiscussion/1]]
+[ext[Page 1|./DownloadedPagesDiscussion/1]]
 
 Thread Status: Alive</pre>
 </div>
-<div created="20140622153734925" creator="Sixy" modified="20150211082346818" modifier="Sixy" title="DownloadedPagesPEFE">
+<div created="20140622153734925" creator="Sixy" modified="20160227064613790" modifier="Sixy" title="DownloadedPagesPEFE">
 <pre>Pages: 1 - 320
 
-[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesPEFE/1]]
+[ext[Page 1|./DownloadedPagesPEFE/1]]
 
 Thread Status: Alive</pre>
 </div>
-<div created="20140622153721573" creator="Sixy" modified="20140622160804557" modifier="Sixy" title="DownloadedPagesPTRP">
+<div created="20140622153721573" creator="Sixy" modified="20160227064628077" modifier="Sixy" title="DownloadedPagesPTRP">
 <pre>Pages: 1 - 19
 
-[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesPTRP/1]]
+[ext[Page 1|./DownloadedPagesPTRP/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153718626" creator="Sixy" modified="20140622160758981" modifier="Sixy" title="DownloadedPagesPTRPDiscussion">
+<div created="20140622153718626" creator="Sixy" modified="20160227064631996" modifier="Sixy" title="DownloadedPagesPTRPDiscussion">
 <pre>Pages: 1 - 5
 
-[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesPTRPDiscussion/1]]
+[ext[Page 1|./DownloadedPagesPTRPDiscussion/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153714339" creator="Sixy" modified="20140622160751416" modifier="Sixy" title="DownloadedPagesPTRPSignups">
+<div created="20140622153714339" creator="Sixy" modified="20160227064403120" modifier="Sixy" title="DownloadedPagesPTRPSignups">
 <pre>Pages: 1 - 6
 
-[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesPTRPSignups/1]]
+[ext[Page 1|./DownloadedPagesPTRPSignups/1]]
 
 Thread Status: Dead</pre>
 </div>
-<div created="20140622153708719" creator="Sixy" modified="20150610015803991" modifier="Sixy" title="DownloadedPagesSignups">
+<div created="20140622153708719" creator="Sixy" modified="20160227064609983" modifier="Sixy" title="DownloadedPagesSignups">
 <pre>Pages: 1 - 76
 
-[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesSignups/1]]
+[ext[Page 1|./DownloadedPagesSignups/1]]
 
 Thread Status: Alive</pre>
 </div>
-<div created="20140622153522931" creator="Sixy" modified="20150610015603828" modifier="Sixy" title="DownloadedPagesWAAPT">
+<div created="20140622153522931" creator="Sixy" modified="20160227062227048" modifier="Sixy" title="DownloadedPagesWAAPT">
 <pre>Pages: 1 - 18325
 
-[[Page 1|http://sixthhokage1.github.io/waapt/DownloadedPagesWAAPT/1]]
+[ext[Page 1|./DownloadedPagesWAAPT/1]]
 
 Thread Status: Alive</pre>
 </div>
